--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "eslint": "^8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "styled-components": "^6.0.0-rc.3",
     "typescript": "5.1.3"
   },
